# codachi

./: Cargo.toml  README.md
.codachi/: state.json
ascii/: SPRITES.md  buddy-angry-2.txt  buddy-angry.txt  buddy-excite-2.txt  buddy-excite.txt  buddy-idle-2.txt  buddy-idle-3.txt  buddy-idle.txt  buddy-sick-2.txt  buddy-sick.txt  buddy-sleep-2.txt  buddy-sleep.txt  egg-angry-2.txt  egg-angry.txt  egg-excite-2.txt  egg-excite-3.txt  egg-excite.txt  egg-idle-2.txt  egg-idle-3.txt  egg-idle.txt  egg-sick-2.txt  egg-sick.txt  egg-sleep-2.txt  egg-sleep-3.txt  egg-sleep-4.txt  egg-sleep.txt  elder-angry-2.txt  elder-angry.txt  elder-excite-2.txt  elder-excite.txt  elder-idle-2.txt  elder-idle-3.txt  elder-idle.txt  elder-sick-2.txt  elder-sick.txt  elder-sleep-2.txt  elder-sleep.txt
docs/: IDEAS.md
docs/plans/: 2026-04-08-codachi.md
docs/specs/: 2026-04-08-codachi-design.md
src/: achievements.rs  app.rs  config.rs  language.rs  lib.rs  main.rs  pet.rs  remarks.rs  state.rs
src/events/: git.rs  linter.rs  mod.rs  watcher.rs
src/ui/: animations.rs  custom_sprites.rs  layout.rs  mod.rs  sprites.rs  widgets.rs
tests/: achievements_test.rs  config_test.rs  git_test.rs  linter_test.rs  pet_test.rs  remarks_test.rs  state_test.rs
