[package]
name = "codachi"
version = "0.1.0"
edition = "2021"
description = "A terminal Tamagotchi pet that reacts to your code"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
regex = "1"
glob-match = "0.2"

[dev-dependencies]
tempfile = "3"
